# Python_Data_Analyst

./: .gitignore  First_Programme.ipynb  LICENSE  Matpotlib_Perso.ipynb  Numpy_Perso.ipynb  Panda_Perso.ipynb  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
Langages_Python/: TP_02.ipynb  TP_02_Built-in_Data_Structures_Functions.ipynb  TP_03_NumPy Basics_Arrays_and_Vectorized_Computation.ipynb  TP_04.ipynb  TP_04_NumPy_Basics_Arrays_and_Vectorized_Computation.ipynb  TP_05_Data_Cleaning_and_Preparation.ipynb  TP_06.ipynb  TP_06_Plotting_and_Visualization.ipynb  TP_08_Chargement_sauvegarde_des_données.ipynb
Scrapping _de_donnee_avec_python/: Cours_Mercredi_10_mars .ipynb  Python_scraping_TP0.ipynb  Python_scraping_TP1.ipynb  TP - Web_Scraping.ipynb
Scrapping _de_donnée_avec_python/: Cours_Mercredi_10_mars .ipynb
data/: README.md
notebooks/: 01_pandas_fondamentaux.ipynb  02_nettoyage_donnees.ipynb  03_transformation_agregation.ipynb  04_visualisation_matplotlib.ipynb  05_web_scraping.ipynb
reports/: modernisation_report.md  portfolio_checklist.md  renommages.md
src/: __init__.py  analysis.py  data_cleaning.py  data_loader.py  visualization.py
tests/: test_data_cleaning.py  test_data_loader.py
txt/: jupyter.txt  test.txt  test2.txt
