[project]
name = "python-data-analyst"
version = "1.0.0"
description = "Portfolio pédagogique de data analyse avec Python et Pandas"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kevin Toleon" }]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "archive_originale"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["archive_originale"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
